--- a/allDataPlots.Rmd
+++ b/allDataPlots.Rmd
@@ -89,3 +89,44 @@ stargazer::stargazer(ep1, ep2, type="text",
  covariate.labels=c("Particulate Matter","Median Income"), out="polution_edu.txt")
 ```
 
+## Boxplots for air pollution, arsenic, and tree cover (Kana)
+```{r}
+
+air_edu_boxplot <- all_data %>%
+  ggplot(aes(Pollution, Bachelors)) +
+  geom_boxplot(aes(color = UrbanCode), size = 1) +
+  geom_point(aes(color = UrbanCode), alpha = 0.3, size = 2) +
+  #scale_color_manual(values = c("#6baed6","#4292c6","#2171b5","#084594")) +
+  geom_smooth(method = "lm") +
+  #facet_grid( ~ IncomeQuartile) +
+  facet_grid(~ UrbanCode)
+  labs(x="Concentration of PM 2.5 (ug/m^3)", y="% Adults with Bachelor's Degrees") +
+  theme_bw()
+
+
+#as_edu_boxplot <- all_data_arsenic %>%
+#  ggplot(aes(arsenic, Bachelors)) +
+#  geom_boxplot(aes(color = IncomeQuartile), size = 1) +
+#  geom_point(aes(color = IncomeQuartile), alpha = 0.3, size = 2) +
+#  scale_color_manual(values = c("#6baed6","#4292c6","#2171b5","#084594")) +
+#  geom_smooth(method = "lm") +
+#  facet_grid( ~ IncomeQuartile) +
+#  labs(x="Concentration of Arsenic (ug/L)", y="% Adults with Bachelor's Degrees") +
+#  theme_bw()
+
+tree_edu_boxplot <- all_data %>%
+  ggplot(aes(TreeCanopyCover, Bachelors)) +
+  geom_boxplot(aes(color = IncomeQuartile),size = 1) +
+  geom_point(aes(color = IncomeQuartile), alpha = 0.3, size = 2) +
+  scale_color_manual(values = c("#6baed6","#4292c6","#2171b5","#084594")) +
+  geom_smooth(method = "lm") +
+  facet_grid( ~ IncomeQuartile) +
+  labs(x="% Tree Canopy Cover", y="% Adults with Bachelor's Degrees") +
+  theme_bw()
+
+air_edu_boxplot
+#as_edu_boxplot
+tree_edu_boxplot
+
+
+```
