--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -48,18 +48,36 @@ Downloading the USACountyEduAttainment data
 #'
 #' @return The edu_data that contains the FIPSCode, UrbanCode (2013 Rural-Urban Continuum Code), LessThanHS (%), HSDiploma (%), Bachelors (%), UrbanRank. 
 
-GetEduData <- function(){
+GetEduData <- function(userName){
   
-  #Use downoload link to read the data
-  url <- "https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Education.xls?v=42762"
-  #tmp is a temporary file in which the data from the excel sheet is stored 
-  tmp <- tempfile(fileext=".xls")
-  download.file(url, destfile=tmp, mode="wb")
-  #read data from sheet 1 beginning at row 5
-  edu_data_unclean <- read_excel(tmp, sheet = 1, skip = 4)
+  # #Use downoload link to read the data
+  # url <- "https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Education.xls?v=42762"
+  # #tmp is a temporary file in which the data from the excel sheet is stored 
+  # tmp <- tempfile(fileext=".xls")
+  # download.file(url, destfile=tmp, mode="wb")
+  # #read data from sheet 1 beginning at row 5
+  # edu_data_unclean <- read_excel(tmp, sheet = 1, skip = 4)
+  # 
+  # #Get rid of the temporary file tmp
+  # unlink(tmp)
   
-  #Get rid of the temporary file tmp
-  unlink(tmp)
+  #------------------
+  # Local Download (USDA down)
+  # ----------------
+  # ----------------
+  if(userName == "K"){
+    path <- "C:\\Users\\kanay\\Documents\\R\\stat133\\AllStates\\"
+  }else if(userName == "V"){
+    path <- "~/Downloads/stats133data/AllStates/"
+  }else if(userName == "A") {
+    path <- "/Users/anishakumar/Documents/Stats133/RStudioFiles/Stats133Project/AllStates/"
+  }else if(userName == "KS"){
+    path <- "C:\\Users\\kagex\\Downloads\\edu.xls"
+  }else{
+    path <- "C:\\Users\\Katrlyn\\stats133Project\\AllStates\\"
+  }
+  edu_data_unclean <- read_excel(path, sheet = 1, skip = 4)
+  
   
   #Wrangle and select variables
   
@@ -171,18 +189,37 @@ Downloading the USACountyIncomeEmploy data
 #'
 #' @return The income dataframe that contains FIPSCode, Income, Unemployment and IncomeQuartile 
 
-GetIncomeData <- function(){
+GetIncomeData <- function(userName){
+  # 
+  # #download the data from the URL
+  # url <- "https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Unemployment.xls?v=42762"
+  # #temporarily store the file
+  # tmp <- tempfile(fileext=".xls")
+  # download.file(url, destfile=tmp, mode="wb")
+  # 
+  # income_unclean <- read_excel(tmp, sheet = 1, skip = 7)
+  # 
+  # #remove the temporary file
+  # unlink(tmp)
   
-  #download the data from the URL
-  url <- "https://www.ers.usda.gov/webdocs/DataFiles/CountyLevel_Data_Sets_Download_Data__18026/Unemployment.xls?v=42762"
-  #temporarily store the file
-  tmp <- tempfile(fileext=".xls")
-  download.file(url, destfile=tmp, mode="wb")
+  #------------------
+  # Local Download (USDA down)
+  # ----------------
+  if(userName == "K"){
+    path <- "C:\\Users\\kanay\\Documents\\R\\stat133\\AllStates\\"
+  }else if(userName == "V"){
+    path <- "~/Downloads/stats133data/AllStates/"
+  }else if(userName == "A") {
+    path <- "/Users/anishakumar/Documents/Stats133/RStudioFiles/Stats133Project/AllStates/"
+  }else if(userName == "KS"){
+    path <- "C:\\Users\\kagex\\Downloads\\income.xls"
+  }else{
+    path <- "C:\\Users\\Katrlyn\\stats133Project\\AllStates\\"
+  }
   
-  income_unclean <- read_excel(tmp, sheet = 1, skip = 7)
-  
-  #remove the temporary file
-  unlink(tmp)
+  #
+  #
+  income_unclean <- read_excel(path, sheet = 1, skip = 7)
   
   #remove any non-alphanumeric characters
   income <- income_unclean %>% 
@@ -554,7 +591,7 @@ Main Code: Acquire and Join all data
 # READ BELOW BEFORE RUNNING
 #--------------------
 #Put the first initial of your first name.
-userName = "A"
+userName = "KS"
 
 all_data=NULL
 
@@ -562,8 +599,8 @@ all_data=NULL
 every_county <- GetCountyReference()
 
 #Acquire all data using support functions
-edu_data <- GetEduData()
-income_data <- GetIncomeData()
+edu_data <- GetEduData(userName)
+income_data <- GetIncomeData(userName)
 poll_data <- GetPollutionData()
 tree_data <- GetTreeData(userName)
 
