--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -107,7 +107,7 @@ GetEduData <- function(userName){
         edu_data$UrbanRank[i] <- "Rural"
       }
   }
-
+edu_data$UrbanRank <- factor(edu_data$UrbanRank, levels = c("Rural", "Urban", "Metropolitan"))
   return(edu_data)
 }
 
