Updated the GetStateRegion function so that it actually works

--- a/CleanAndJoinData.Rmd
+++ b/CleanAndJoinData.Rmd
@@ -413,24 +413,23 @@ ExtractStateData <- function(file, stateAbbrev){
 GetStateRegion <- function(all_data){
   all_data$Region <- ""
   for (i in 1:nrow(all_data)){
-    if (all_data$StateFips[i] %in% c(53, 16, 32, 06, 41)){
+    if (all_data$StateFips[i] %in% c("53", "16", "32", "06", "41", "02")){
       all_data$Region[i]<- "Pacific"
-    } else if (all_data$StateFips[i] %in% c(35, 04, 49, 40 )){
+    } else if (all_data$StateFips[i] %in% c("35", "04", "49", "40", "15")){
       all_data$Region[i]<- "SouthWest"
-    } else if (all_data$StateFips[i] %in% c(30, 38, 46, 49, 56, 08, 31, 20)){
+    } else if (all_data$StateFips[i] %in% c("30", "38", "46", "49", "56", "08", "31", "20")){
       all_data$Region[i] <- "West"
-    } else if (all_data$StateFips[i] %in% c(05, 22, 01, 47, 28, 12, 37, 45, 21, 13)){
+    } else if (all_data$StateFips[i] %in% c("05", "22", "01", "47", "28", "12", "37", "45", "21", "13")){
       all_data$Region[i] <- "SouthEast"
-    } else if (all_data$StateFips[i] %in% c(19, 29, 26, 27, 17, 18, 55, 39)){
+    } else if (all_data$StateFips[i] %in% c("19", "29", "26", "27", "17", "18", "55", "39")){
       all_data$Region[i] <- "MidWest"
-    } else if (all_data$StateFips[i] %in% c(51, 54, 24, 44, 42, 36, 23, 33, 50, 25, 09, 34, 10, 11)){
+    } else if (all_data$StateFips[i] %in% c("51", "54", "24", "44", "42", "36", "23", "33", "50", "25", "09", "34", "10", "11")){
       all_data$Region[i] <- "NorthEast"
     } else 
       all_data$Region[i] <- NA
   }
   return(all_data)
 }
-
 ```
 
 
